# depricated-cmdpkg

./: LICENSE  README.md  pyproject.toml
cmdpkg/: __init__.py  _base.py  _typing.py  base.py  command.py  models.py  process.py  shell.py  ssh.py  utils.py
cmdpkg/commands/: base.py  utils.py
cmdpkg/runners/: base.py  models.py  process.py  shell.py  utils.py
tests/: conftest.py  test_base.py  test_command.py  test_connection.py  test_models.py  test_process.py  test_settings.py  test_shell.py  test_ssh.py  test_utils.py
tests/commands/: test_base.py  test_utils.py
tests/runners/: test_base.py  test_models.py  test_process.py  test_shell.py  test_utils.py
